Fix #36748 Sculpting/image painting does not respect undo steps limit.

A simple oversight here, it should work as intended now.

Nice to have it functional for people who might hate dyntopo undo with a
passion.